# tafl

./: .gitignore  README.md
.github/: FUNDING.yml
scripts/: data.json  deploy.sh  get_data.sh  headers.txt  ingest.py
tafl/: data.json  metadata.json  pyproject.toml  settings.json
